--- a/pages/index.html
+++ b/pages/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" /> -->
-
     <link rel="stylesheet" href="../resources/css/css-reset.css" />
     <title>Sequelize</title>
   </head>
@@ -13,7 +11,14 @@
     <header></header>
     <main>
       <article class="sequelize wrapper">
-        <h1 class="title">Sequelize</h1>
+        <div class="title-block">
+          <h1 class="title">Sequelize</h1>
+          <p class="info">
+            <span class="creator">S Avery</span
+            ><span class="date">August 20, 2021</span>
+          </p>
+        </div>
+
         <div class="intro">
           <p class="para">
             In this article we will be focusing on Sequelize, an ORM library
@@ -37,10 +42,16 @@
           <div>
             <p class="subtitle">What exactly is Sequelize?</p>
             <p class="para">
-              <!-- <span class="subtitle">What exactly is Sequelize?</span> -->
               Sequelize is an open-source Node.js module that allows you to
               interact directly with an object in JavaScript.
             </p>
+            <div class="img-container">
+              <img
+                class="full-screen"
+                src="../resources/img/node-model.png"
+                alt=""
+              />
+            </div>
           </div>
         </section>
         <hr />
@@ -344,7 +355,35 @@
         </section>
       </article>
     </main>
-    <footer></footer>
+    <footer>
+      <article class="wrapper">
+        <section id="resources">
+          <div>
+            <p class="subtitle underline">Resources</p>
+            <ul class="para">
+              <li>
+                <a href="https://sequelize.org/" target="_blank"
+                  >https://sequelize.org/</a
+                >
+              </li>
+              <li>
+                <a href="https://github.com/sequelize/sequelize" target="_blank"
+                  >https://github.com/sequelize/sequelize</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.section.io/engineering-education/introduction-to-sequalize-orm-for-nodejs/"
+                  target="_blank"
+                  >www.section.io</a
+                >
+              </li>
+            </ul>
+          </div>
+        </section>
+      </article>
+      <div class="name">SAvery</div>
+    </footer>
 
     <script src="../js/index.js"></script>
   </body>
